{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 60,
  "lineage": "67510413-eefd-8d7a-48ad-6ddf88972cc7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9f3b291840d6834",
            "arn": "arn:aws:ec2:us-east-1:989142032335:elastic-ip/eipalloc-0a9f3b291840d6834",
            "association_id": "eipassoc-0d24765179c352e36",
            "domain": "vpc",
            "id": "eipalloc-0a9f3b291840d6834",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01505a815ae561465",
            "private_dns": "ip-10-0-1-147.ec2.internal",
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-54-243-184-207.compute-1.amazonaws.com",
            "public_ip": "54.243.184.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "zerogate-nat-eip"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "zerogate-nat-eip",
              "Project": "ZeroGate"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989142032335:internet-gateway/igw-032e4f8078ee13d68",
            "id": "igw-032e4f8078ee13d68",
            "owner_id": "989142032335",
            "tags": {
              "Name": "zero-trust-igw"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "zero-trust-igw",
              "Project": "ZeroGate"
            },
            "vpc_id": "vpc-07ed82ad009ea1176"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989142032335:loadbalancer/app/zerogate-alb/94dd44adc10d4562",
            "arn_suffix": "app/zerogate-alb/94dd44adc10d4562",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "zerogate-alb-1120430268.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:989142032335:loadbalancer/app/zerogate-alb/94dd44adc10d4562",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zerogate-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04ad7c3ee20bcf6a2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0831563122d8f29ca"
              },
              {
                "subnet_id": "subnet-0e64e7c85574c8d89"
              }
            ],
            "subnets": [
              "subnet-0831563122d8f29ca",
              "subnet-0e64e7c85574c8d89"
            ],
            "tags": {
              "Name": "zerogate-alb"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "zerogate-alb",
              "Project": "ZeroGate"
            },
            "vpc_id": "vpc-07ed82ad009ea1176",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989142032335:listener/app/zerogate-alb/94dd44adc10d4562/b21dd5d5f3197632",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:989142032335:targetgroup/zerogate-gateway-tg/01dc4136c6259bed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:989142032335:listener/app/zerogate-alb/94dd44adc10d4562/b21dd5d5f3197632",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:989142032335:loadbalancer/app/zerogate-alb/94dd44adc10d4562",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "ZeroGate"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.gateway_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gateway_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989142032335:targetgroup/zerogate-gateway-tg/01dc4136c6259bed",
            "arn_suffix": "targetgroup/zerogate-gateway-tg/01dc4136c6259bed",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,401",
                "path": "/api/v1/secure-data",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:989142032335:targetgroup/zerogate-gateway-tg/01dc4136c6259bed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:989142032335:loadbalancer/app/zerogate-alb/94dd44adc10d4562"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "zerogate-gateway-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "ZeroGate"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07ed82ad009ea1176"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9f3b291840d6834",
            "association_id": "eipassoc-0d24765179c352e36",
            "connectivity_type": "public",
            "id": "nat-07be5dbab88e7fe3c",
            "network_interface_id": "eni-01505a815ae561465",
            "private_ip": "10.0.1.147",
            "public_ip": "54.243.184.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e64e7c85574c8d89",
            "tags": {
              "Name": "zerogate-nat-gw"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "zerogate-nat-gw",
              "Project": "ZeroGate"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989142032335:route-table/rtb-06a10ca04f64a007a",
            "id": "rtb-06a10ca04f64a007a",
            "owner_id": "989142032335",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07be5dbab88e7fe3c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zerogate-private-rt"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "zerogate-private-rt",
              "Project": "ZeroGate"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ed82ad009ea1176"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989142032335:route-table/rtb-066c73cfab6e517b5",
            "id": "rtb-066c73cfab6e517b5",
            "owner_id": "989142032335",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032e4f8078ee13d68",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zerogate-public-rt"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "zerogate-public-rt",
              "Project": "ZeroGate"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ed82ad009ea1176"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0591342f0805e2c68",
            "route_table_id": "rtb-06a10ca04f64a007a",
            "subnet_id": "subnet-0874ea990686220cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e1d779a732fd848",
            "route_table_id": "rtb-06a10ca04f64a007a",
            "subnet_id": "subnet-05105f2f8fc8fc66f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa559f5d021f5dc2",
            "route_table_id": "rtb-066c73cfab6e517b5",
            "subnet_id": "subnet-0e64e7c85574c8d89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fe147dd30666fb0",
            "route_table_id": "rtb-066c73cfab6e517b5",
            "subnet_id": "subnet-0831563122d8f29ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989142032335:security-group/sg-04ad7c3ee20bcf6a2",
            "description": "Allow inbound HTTP/HTTPS from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ad7c3ee20bcf6a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "zerogate-alb-sg",
            "name_prefix": "",
            "owner_id": "989142032335",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zerogate-alb-sg"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "zerogate-alb-sg",
              "Project": "ZeroGate"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ed82ad009ea1176"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gateway_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989142032335:security-group/sg-016d9ab67d67b7396",
            "description": "Allow traffic ONLY from the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016d9ab67d67b7396",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic routed from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ad7c3ee20bcf6a2"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "zerogate-gateway-sg",
            "name_prefix": "",
            "owner_id": "989142032335",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zerogate-gateway-sg"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "zerogate-gateway-sg",
              "Project": "ZeroGate"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ed82ad009ea1176"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "microservice_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989142032335:security-group/sg-0c959acbaafc034a8",
            "description": "Allow traffic ONLY from the Zero-Trust Gateway",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c959acbaafc034a8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic explicitly from Gateway",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-016d9ab67d67b7396"
                ],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "zerogate-microservice-sg",
            "name_prefix": "",
            "owner_id": "989142032335",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zerogate-microservice-sg"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "zerogate-microservice-sg",
              "Project": "ZeroGate"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ed82ad009ea1176"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.gateway_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989142032335:subnet/subnet-0874ea990686220cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0874ea990686220cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "989142032335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1a"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-1a",
              "Project": "ZeroGate"
            },
            "vpc_id": "vpc-07ed82ad009ea1176"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989142032335:subnet/subnet-05105f2f8fc8fc66f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05105f2f8fc8fc66f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "989142032335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1b"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-1b",
              "Project": "ZeroGate"
            },
            "vpc_id": "vpc-07ed82ad009ea1176"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989142032335:subnet/subnet-0e64e7c85574c8d89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e64e7c85574c8d89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "989142032335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1a"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-1a",
              "Project": "ZeroGate"
            },
            "vpc_id": "vpc-07ed82ad009ea1176"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989142032335:subnet/subnet-0831563122d8f29ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0831563122d8f29ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "989142032335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1b"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-1b",
              "Project": "ZeroGate"
            },
            "vpc_id": "vpc-07ed82ad009ea1176"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989142032335:vpc/vpc-07ed82ad009ea1176",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0309e578f913e9fb8",
            "default_route_table_id": "rtb-0f8bfac30d4c7c80a",
            "default_security_group_id": "sg-078aefb23b891cef3",
            "dhcp_options_id": "dopt-08580607534228f43",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ed82ad009ea1176",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8bfac30d4c7c80a",
            "owner_id": "989142032335",
            "tags": {
              "Name": "zero-trust-vpc"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "zero-trust-vpc",
              "Project": "ZeroGate"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}